@@ -333,7 +333,7 @@ Localization
                 #LOC_BDArmory_Settings_MutatorIcons = Show Mutator Icons
 
             #LOC_BDArmory_Settings_WaypointsMode = Waypoints Mode
-            #LOC_BDArmory_Settings_GLimitsMode = G-Force Limits
+            #LOC_BDArmory_Settings_GLimitsMode = Override G-Force Limits
 
         // Battle Damage
             #LOC_BDArmory_Settings_BDSettingsToggle = Battle Damage settings
