@@ -6,6 +6,7 @@ using System.IO;
 using System.Collections.Generic;
 using System;
 using BDArmory.UI;
+using BDArmory.Utils;
 
 namespace BDArmory.Settings
 {
@@ -30,6 +31,10 @@ namespace BDArmory.Settings
 				{"BATTLEDAMAGE", true},
 				{"DESTROY_UNCONTROLLED_WMS", true},
 				{"DISABLE_RAMMING", false},
+				{"G_LIMITS", true}, // Override G-Limits from Game Difficulty and disable them
+				{"KERB_GLIMIT", false},
+				{"PART_GLIMIT", false},
+				{"G_TOLERANCE", 1},
 				{"HACK_INTAKES", true},
 				{"HP_THRESHOLD", 2000},
 				{"INFINITE_AMMO", false},
@@ -176,7 +181,7 @@ namespace BDArmory.Settings
 			{
 				RestoreSettings(); // Restore the non-RWP settings.
 			}
-			SyncToGameSettings();
+			if (HighLogic.LoadedSceneIsFlight || HighLogic.LoadedSceneIsEditor) SyncWithGameSettings(); // Enable our overrides (if active).
 			RWPEnabled = enabled;
 			if (BDArmorySetup.Instance != null) BDArmorySetup.Instance.UpdateSelectedMutators(); // Update the mutators selected in the UI.
 		}
@@ -288,23 +293,49 @@ namespace BDArmory.Settings
 		/// Synchronise any settings between BDA and KSP that need syncing.
 		/// Note: This needs to be called after Awake (e.g., in Start) otherwise game-loading on scene initialisation overwrites these changes.
 		/// </summary>
-		public static void SyncToGameSettings()
+		public static void SyncWithGameSettings(bool toKSP = true, bool restoreOverridesAndSave = false)
 		{
 			if (HighLogic.CurrentGame != null)
 			{
 				var advancedParams = HighLogic.CurrentGame.Parameters.CustomParams<GameParameters.AdvancedParams>();
-				if (BDArmorySettings.DEBUG_OTHER) Debug.Log($"[BDArmory.RWPSettings]: G-limits: {BDArmorySettings.G_LIMITS}, part limits: {BDArmorySettings.PART_GLIMIT} / {advancedParams.GPartLimits}, Kerbal limits: {BDArmorySettings.KERB_GLIMIT} / {advancedParams.GKerbalLimits}, Kerb G-tol: {BDArmorySettings.G_TOLERANCE:0.0} / {advancedParams.KerbalGToleranceMult * 20.5f:0.0}");
-				if (BDArmorySettings.G_LIMITS)
+				if (toKSP)
 				{
-					advancedParams.GPartLimits = BDArmorySettings.PART_GLIMIT;
-					advancedParams.GKerbalLimits = BDArmorySettings.KERB_GLIMIT;
-					advancedParams.KerbalGToleranceMult = BDArmorySettings.G_TOLERANCE / 20.5f; //Default 0.5 Courage BadS Pilot kerb has a GLimit of 20.5
+					if (BDArmorySettings.G_LIMITS && !restoreOverridesAndSave)
+					{
+						if (BDArmorySettings.DEBUG_OTHER) Debug.Log($"[BDArmory.RWPSettings]: Adjusting G-limits: part limits: {advancedParams.GPartLimits} -> {BDArmorySettings.PART_GLIMIT}, kerbal limits: {advancedParams.GKerbalLimits} -> {BDArmorySettings.KERB_GLIMIT}, tolerance: {advancedParams.KerbalGToleranceMult * 20.5f:0.0}g -> {BDArmorySettings.G_TOLERANCE:0.0}g");
+						advancedParams.GPartLimits = BDArmorySettings.PART_GLIMIT;
+						advancedParams.GKerbalLimits = BDArmorySettings.KERB_GLIMIT;
+						advancedParams.KerbalGToleranceMult = BDArmorySettings.G_TOLERANCE / 20.5f; //Default 0.5 Courage BadS Pilot kerb has a GLimit of 20.5
+					}
+					else if (restoreOverridesAndSave) // Restore the override values and save the game (due to changing scenes since KSP reloads these from the save file).
+					{
+						if (BDArmorySettings.G_LIMITS) // If G-limit was active and settings were changed in the Game Difficulty, but not synced to BDA due to the menu not being open, sync them now.
+						{
+							if (BDArmorySettings.PART_GLIMIT != (BDArmorySettings.PART_GLIMIT = advancedParams.GPartLimits)) BDArmorySettings._PART_GLIMIT = BDArmorySettings.PART_GLIMIT;
+							if (BDArmorySettings.KERB_GLIMIT != (BDArmorySettings.KERB_GLIMIT = advancedParams.GKerbalLimits)) BDArmorySettings._KERB_GLIMIT = BDArmorySettings.KERB_GLIMIT;
+							if (BDArmorySettings.G_TOLERANCE != (BDArmorySettings.G_TOLERANCE = BDAMath.RoundToUnit(advancedParams.KerbalGToleranceMult * 20.5f, 0.5f))) BDArmorySettings._G_TOLERANCE = BDArmorySettings.G_TOLERANCE;
+							BDArmorySetup.SaveConfig(); // We need to update the saved settings for these to be kept.
+						}
+						if (BDArmorySettings.DEBUG_OTHER) Debug.Log($"[BDArmory.RWPSettings]: Reverting to Game Difficulty G-limits for scene change: part limits: {BDArmorySettings._PART_GLIMIT}, kerbal limits: {BDArmorySettings._KERB_GLIMIT}, tolerance: {BDArmorySettings._G_TOLERANCE:0.0}g");
+						advancedParams.GPartLimits = BDArmorySettings._PART_GLIMIT;
+						advancedParams.GKerbalLimits = BDArmorySettings._KERB_GLIMIT;
+						advancedParams.KerbalGToleranceMult = BDArmorySettings._G_TOLERANCE / 20.5f;
+						GamePersistence.SaveGame("persistent", HighLogic.SaveFolder, SaveMode.OVERWRITE);
+					}
+					else // G-Limits was disabled, revert to the last seen values from the user adjusting the Game Difficulty menu
+					{
+						advancedParams.GPartLimits = BDArmorySettings._PART_GLIMIT;
+						advancedParams.GKerbalLimits = BDArmorySettings._KERB_GLIMIT;
+						advancedParams.KerbalGToleranceMult = BDArmorySettings._G_TOLERANCE / 20.5f;
+						if (BDArmorySettings.DEBUG_OTHER) Debug.Log($"[BDArmory.RWPSettings]: Reverting to Game Difficulty G-limits: part limits: {BDArmorySettings._PART_GLIMIT}, kerbal limits: {BDArmorySettings._KERB_GLIMIT}, tolerance: {BDArmorySettings._G_TOLERANCE:0.0}g");
+					}
 				}
-				else // Reset G-Limits to defaults and disable them.
+				else
 				{
-					advancedParams.GPartLimits = false;
-					advancedParams.GKerbalLimits = false;
-					advancedParams.KerbalGToleranceMult = 1f;
+					BDArmorySettings._PART_GLIMIT = advancedParams.GPartLimits;
+					BDArmorySettings._KERB_GLIMIT = advancedParams.GKerbalLimits;
+					BDArmorySettings._G_TOLERANCE = BDAMath.RoundToUnit(advancedParams.KerbalGToleranceMult * 20.5f, 0.5f); //Default 0.5 Courage BadS Pilot kerb has a GLimit of 20.5
+					if (BDArmorySettings.DEBUG_OTHER) Debug.Log($"[BDArmory.RWPSettings]: Updating BDA's Game Difficulty backing values: part limits: {BDArmorySettings._PART_GLIMIT}, kerbal limits: {BDArmorySettings._KERB_GLIMIT}, tolerance: {BDArmorySettings._G_TOLERANCE:0.0}g");
 				}
 			}
 		}
