@@ -1,4 +1,6 @@
 ﻿IMPROVEMENTS / FIXES
+- General:
+	- Update the logic for syncing advanced 'Game Difficulty' settings to respect custom G-limit settings.
 - UI:
 	- Add an alternate layout to the entries in the vessel switcher, togglable via the ↔ button.
 	- Adjust colour of vessel status and target strings in the vessel switcher for better visibility.
